Varios cambios al css y html

--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Queue Simulation</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My queue example</title>
+    <link rel="stylesheet" href="Styles.css">
 </head>
+
 <body>
     <div class="container">
-        <h1>Queue Simulation</h1>
+
+        <h1>Queue Example :3</h1>
+
         <div class="queue-container" id="queue-container">
             <!-- Queue elements will be displayed here -->
         </div>
-        <input type="text" id="inputValue" placeholder="Enter a value" />
-        <button onclick="enqueue()">Insert</button>
-        <button onclick="dequeue()">Delete</button>
-        <button onclick="readQueue()">Read</button>
+        <input type="text" id="inputValue" placeholder="Ingresar a queue" />
+        <button onclick="enqueue()">Insertar</button>
+        <button onclick="dequeue()">Borrar</button>
+        <button onclick="readQueue()">Leer queue</button>
         <div id="output"></div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="Script.js"></script>
+
 </body>
+
 </html>
